--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -38,5 +38,8 @@ jobs:
 
       - run: mix compile --warnings-as-errors
 
+      - name: Check code is formatted
+        run: mix format --check-formatted
+
       - name: Run tests
         run: mix test --max-failures 1 --trace --warnings-as-errors
