--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -95,7 +95,7 @@ jobs:
       - uses: docker/setup-buildx-action@v3
 
       - name: Set up QEMU
-      - uses: docker/setup-qemu-action@v3
+        uses: docker/setup-qemu-action@v3
 
       - uses: docker/build-push-action@v5
         with:
